Version: 0.1.25
Date: ????
  Changes:
    - Handle recycling of items with non-stackable ingredients
    - Setting for "no quality" items/groups/subgroups for simpler interoperability
  Bug fixes:
    - Extra quality bonus for underground pipe now supports weird underground pipes
    - Fixed handling of energy values without exponent
---------------------------------------------------------------------------------------------------
Version: 0.1.24
Date: 2024-01-11
  Changes:
    - Extras are now not enabled by default
    - Module effect bonuses now work on non-vanilla modules
    - No quality on items with "only-in-cursor"
---------------------------------------------------------------------------------------------------
Version: 0.1.23
Date: 2023-12-12
  Changes:
    - Added support for prototype categories in bonuses such as __item__ and __entity__
    - Hid quality machines from showing up on bonuses and fuel values
    - Worms and other enemies don't get quality (oops!)
    - Added quality bonus to quality module descriptions
---------------------------------------------------------------------------------------------------
Version: 0.1.22
Date: 2023-12-11
  Changes:
    - Support miners with different number of modules
    - Incompatible with "Shortcuts for 1.1" and "Module Inserter Simplified" due to crashes
---------------------------------------------------------------------------------------------------
Version: 0.1.21
Date: 2023-12-10
  Bug fixes:
    - Fixed compatibility with selector combinator
---------------------------------------------------------------------------------------------------
Version: 0.1.20
Date: 2023-12-07
  Changes:
    - Reorganized data/updates/fixes to be more compatible with other mods
  Bug fixes:
    - Fixed compatibility when tiles forbid quality
---------------------------------------------------------------------------------------------------
Version: 0.1.19
Date: 2023-11-30
  Changes: